--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "@types/jest": "^23.3.5",
     "auto": "^7.6.0",
     "husky": "^1.1.2",
-    "jest": "^23.6.0",
+    "jest": "^26.0.1",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
-    "ts-jest": "^23.10.4",
+    "ts-jest": "^26.1.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-xo": "^0.9.0",
@@ -64,8 +64,8 @@
     "encoder",
     "decoder",
     "image",
-    "javascript",
-    "js"
+    "bitmap",
+    "typescript"
   ],
   "jest": {
     "collectCoverage": true,
