--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bmp-ts",
-  "version": "1.0.3",
-  "description": "A pure typescript BMP encoder and decoder",
+  "name": "@wokwi/bmp-ts",
+  "version": "2.0.0",
+  "description": "A pure TypeScript BMP encoder and decoder",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
