refactor: move types to source code
This make it easier for other to consume the package

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "url": "https://github.com/hipstersmoothie/bmp-ts"
   },
   "files": [
-    "dist",
-    "types"
+    "dist"
   ],
   "author": {
     "name": "Andrew lisowski",
