--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es2015",
     "declaration": true,
-    "lib": ["esnext"],
+    "lib": ["es2015"],
     "moduleResolution": "node",
     "downlevelIteration": true,
     "noUnusedLocals": true,
@@ -14,5 +14,5 @@
     "sourceMap": true,
     "strict": true
   },
-  "include": ["lib", "types"]
+  "include": ["lib"]
 }
