--- a/package.json
+++ b/package.json
@@ -20,15 +20,13 @@
   "scripts": {
     "build": "rimraf dist && tsc --sourceMap false && tsc -m commonjs --outDir dist/cjs --sourceMap false",
     "lint": "tslint -p . --format stylish",
-    "test": "jest",
-    "release": "auto shipit"
+    "test": "jest"
   },
   "dependencies": {
     "@types/node": "^10.11.7"
   },
   "devDependencies": {
     "@types/jest": "^23.3.5",
-    "auto": "^7.6.0",
     "husky": "^1.1.2",
     "jest": "^26.0.1",
     "lint-staged": "^7.3.0",
